Replace Collections.singletonList/singletonMap with List.of/Map.of
Migrate from deprecated java.util.Collections factory methods to modern
Java collection literals (List.of and Map.of) throughout the codebase.

- Replace Collections.singletonList(x) with List.of(x)
- Replace Collections.singletonMap(k, v) with Map.of(k, v)
- Remove static imports of Collections.singletonList/singletonMap
- Remove unused import java.util.Collections; where applicable
- Add import java.util.List; and import java.util.Map; where needed
- Preserve Collections.singletonList/singletonMap with @SuppressForbidden
  annotation in the 6 known cases where null is passed as an argument
  (List.of/Map.of throw NullPointerException on null values)

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>