@@ -26,7 +26,6 @@ import java.net.URI;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -155,8 +154,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
             instanceof HttpJdkSolrClient);
 
     zkBasedCloudSolrClient =
-        new CloudSolrClient.Builder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+        new CloudSolrClient.Builder(List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .build();
     assertTrue(zkBasedCloudSolrClient.getHttpClient() instanceof HttpJettySolrClient);
     assertTrue(
@@ -411,7 +409,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
     // Test Multi-Threaded routed updates for UpdateRequest
     try (CloudSolrClient threadedClient =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .sendUpdatesOnlyToShardLeaders()
             .withParallelUpdates(true)
             .withDefaultCollection("routing_collection")
@@ -696,7 +694,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
 
     try (CloudSolrClient client =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .withDefaultCollection("foo")
             .build()) {
       // important to have one replica on each node
@@ -771,7 +769,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
   public void checkCollectionParameters() throws Exception {
     try (CloudSolrClient client =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .withDefaultCollection("multicollection1")
             .build()) {
 
@@ -891,9 +889,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
   @Test
   public void testShutdown() throws IOException {
     try (CloudSolrClient client =
-        new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(DEAD_HOST_1), Optional.empty())
-            .build()) {
+        new RandomizingCloudSolrClientBuilder(List.of(DEAD_HOST_1), Optional.empty()).build()) {
       try (ZkClientClusterStateProvider zkClientClusterStateProvider =
           ZkClientClusterStateProvider.from(client)) {
         zkClientClusterStateProvider.setZkConnectTimeout(100);
@@ -907,8 +903,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
   public void testWrongZkChrootTest() throws IOException {
     try (CloudSolrClient client =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress() + "/xyz/foo"),
-                Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress() + "/xyz/foo"), Optional.empty())
             .build()) {
       try (ZkClientClusterStateProvider zkClientClusterStateProvider =
           ZkClientClusterStateProvider.from(client)) {
@@ -927,7 +922,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
     CloseableHttpClient client = HttpClientUtil.createClient(null);
     try (CloudSolrClient solrClient =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .withHttpClient(client)
             .build()) {
 
@@ -1045,7 +1040,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
     // NOTE: creating our own CloudSolrClient whose settings we can muck with...
     try (CloudSolrClient stale_client =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .withParallelUpdates(true)
             .sendDirectUpdatesToAnyShardReplica()
             .withDefaultCollection(COL)
